# livelib

./: README.md  settings.gradle
SimpleRTMP/src/androidTest/java/com/github/faucamp/simplertmp/: ExampleInstrumentedTest.java
SimpleRTMP/src/main/: AndroidManifest.xml
SimpleRTMP/src/test/java/com/github/faucamp/simplertmp/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/example/unityandroidlive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  push.cpp
app/src/main/java/com/example/android/common/activities/: SampleActivityBase.java
app/src/main/java/com/example/android/common/logger/: LogFragment.java
app/src/main/java/com/example/android/screencapture/: MainActivity.java  ScreenCaptureFragment.java
app/src/main/java/com/example/unityandroidlive/: CameraActivity.java  CustomEncodeHandler.java  CustomRecordHandler.java  CustomRtmpHandler.java  LivePushActivity.java  MainActivity.java  RecodeActivity.java
app/src/main/java/com/example/unityandroidlive/camera/: CameraEglSurfaceView.java  CameraFboRender.java  CameraHelper.java  CameraRender.java
app/src/main/java/com/example/unityandroidlive/egl/: EglHelper.java  EglSurfaceView.java
app/src/main/java/com/example/unityandroidlive/encodec/: BaseMediaEncoder.java  VideoEncodeRecode.java  VideoEncodeRender.java
app/src/main/java/com/example/unityandroidlive/rtmp/: OnConntionListener.java  RtmpHelper.java
app/src/main/java/com/example/unityandroidlive/rtmp/encoder/: AudioRecorder.java  BasePushEncoder.java  PushEncode.java  VideoPushRender.java
app/src/main/java/com/example/unityandroidlive/util/: ByteUtil.java  DisplayUtil.java  ShaderUtil.java
app/src/main/res/layout/: activity_camera.xml  activity_live_push.xml  activity_main.xml  activity_recode.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/unityandroidlive/: ExampleUnitTest.java
audio/src/main/: AndroidManifest.xml
audio/src/main/java/com/example/audio/: RecordAudio.java
gradle/wrapper/: gradle-wrapper.properties
live/: build.gradle
live/src/androidTest/java/com/live/client/: ExampleInstrumentedTest.java
live/src/main/: AndroidManifest.xml
live/src/main/aidl/com/live/livelib/: ILiveInterface.aidl
live/src/main/java/com/live/client/: Client.java  Util.java
live/src/test/java/com/live/client/: ExampleUnitTest.java
livelib/: build.gradle
livelib/src/androidTest/java/com/example/livelib/: ExampleInstrumentedTest.java
livelib/src/androidTest/java/com/live/livelib/: ExampleInstrumentedTest.java
livelib/src/main/aidl/com/live/livelib/: ILiveInterface.aidl
livelib/src/main/cpp/: CMakeLists.txt  push.cpp
livelib/src/main/cpp/libyuv/: Android.mk  CMakeLists.txt
livelib/src/main/cpp/libyuv-refs_heads_master/: CMakeLists.txt
livelib/src/main/cpp/rtmp/: CMakeLists.txt  push.cpp
livelib/src/main/cpp/rtmp/librtmp/: rtmp.h
livelib/src/main/cpp/yuv/: CMakeLists.txt  JNI.cpp
livelib/src/main/cpp/yuv/libyuv/libyuv/: convert_from_argb.h
livelib/src/main/java/com/example/livelib/: AudioRecorder.java  Live.java  LiveActivity.java  LiveEncoder.java  Util.java
livelib/src/main/java/com/example/livelib/egl/: EglHelper.java  EglSurfaceView.java
livelib/src/main/java/com/example/livelib/encodec/: BaseMediaEncoder.java  VideoEncodeRecode.java  VideoEncodeRender.java
livelib/src/main/java/com/example/livelib/rtmp/: OnConntionListener.java  RtmpHelper.java
livelib/src/main/java/com/example/livelib/rtmp/encoder/: AudioRecorder.java  BasePushEncoder.java  PushEncode.java  VideoPushRender.java
livelib/src/main/java/com/example/livelib/util/: ByteUtil.java  DisplayUtil.java  ShaderUtil.java
livelib/src/main/java/com/example/livelib/yuv/: YuvHelper.java  YuvType.java
livelib/src/main/java/com/live/livelib/: AudioRecorder.java  AudioStream.java  Live.java  LiveActivity.java  LiveClient.java  LiveEncoder.java  LiveService.java  MediaHelper.java  RefreshActivity.java  Scheduler.java  U2A.java  Util.java
livelib/src/main/java/com/live/livelib/rtmp/: OnConntionListener.java  RtmpHelper.java
livelib/src/test/java/com/example/livelib/: ExampleUnitTest.java
livelib/src/test/java/com/live/livelib/: ExampleUnitTest.java
mylibrary/: build.gradle
mylibrary/src/main/java/com/example/mylibrary/rtmp/: OnConntionListener.java  RtmpHelper.java
mylibrary/src/main/java/com/example/mylibrary/rtmp/encoder/: AudioRecorder.java  BasePushEncoder.java  PushEncode.java  VideoPushRender.java
network/: build.gradle
network/src/androidTest/java/com/vlp/network/: ExampleInstrumentedTest.java
network/src/main/: AndroidManifest.xml
network/src/test/java/com/vlp/network/: ExampleUnitTest.java
